# EnderLab

./: .pre-commit-config.yaml  CMI protocole.py  CMI.json  README.md  action.py  api.py  layout.json  layout_1.json  main.py  modules.json  printer.py  protocol.json  protocol.py  protocol_builder.py  pyproject.toml  read me.txt  settings.py  test.json  utils.py  write alliquot protocol.py  write layout.py  write modules.py  write_protocol_test.py
data/: CMI.json  alliquot.json  mix.json  mix_instructions.json  modules.json  multimix.json  protocol.json
data/elementary_steps/: change_tips.json  eject.json  mix.json  mouve_volume.json  pick_cone.json
layout/: __init__.py  layout.py  layout_1.json  module.py
protocol/: action.py  api.py  protocol.py  protocol_creator.py
scripts/: CMI protocole.py  instructions_writer.py  protocol_builder.py  write alliquot protocol.py  write modules.py
tests/: __init__.py  utils.py
