[tool.poetry]
name = "enderlab"
version = "0.1.0"
description = ""
authors = ["Pierre Assemat <assematpierrecpe@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
serial = "^0.0.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
