[tool.poetry]
name = "enderlab"
version = "0.1.0"
description = ""
authors = ["Pierre Assemat <assematpierrecpe@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
serial = "^0.0.97"
fastapi = "^0.115.5"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
